@@ -16,7 +16,8 @@ https://github.com/elastic/apm-server/compare/4daa36bd5c144cf9182afc62dc8042af66
 - Use type integer instead of number in JSON schemas where applicable {pull}641[641].
 - Set array item types to string in JSON schemas {pull}651[651].
 - Fix issue preventing server from being stopped {pull}704[704].
-- Limit the amount of concurrent requests being processed{pull}731[731].
+- Limit the amount of concurrent requests being processed {pull}731[731].
+- Return proper response code for request entity too large {pull}862[862].
 
 ==== Added
 
